--- a/app/views/checklist_items/_new.html.erb
+++ b/app/views/checklist_items/_new.html.erb
@@ -1,6 +1,7 @@
 
 <div>
-  <%= form_for([@milestone, @milestone.checklist_items.build] , html: { 'data-toggle': 'validator'}) do |f| %>
+
+  <%= form_for([@milestone, @milestone.notes.build] , html: { 'data-toggle': 'validator'}) do |f| %>
       <div class="input-group">
         <%= f.text_field :text, class: "submit-on-enter form-control", placeholder: t('milestones.checklist.add_more_items') %>
         <span class="input-group-btn">
