Ya Inserta y muestra

--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -38,8 +38,8 @@
           <%=t('milestones.checklist.actual_objetives')%>
         </h4>
         <hr>
-        <%= render 'checklist_items/new' %>
-        <%= render 'checklist_items/show' %>
+        <%= render 'objectives/new' %>
+        <%= render 'objectives/show' %>
       </div>
     </div>
 
