--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -51,7 +51,7 @@ body {
 @import "milestones";
 @import "dashboard";
 @import "projects";
-@import "checklists_items";
+@import "objectives";
 
 
 .tt-hint {
