--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -29,7 +29,13 @@
                 <td><%= t.id %></td>
                 <td><%= t.name %></td>
                 <td><%= image_tag t.icon %></td>
-                <td><%= t.type %></td>
+                <td>
+                <% if t.technical %>
+                  <%= t('skills.technical') %>
+                <%else%>
+                  <%= t('skills.not_technical') %>
+                <%end%>
+                </td>
                 <% if current_user_admin? %>
                     <td>
                       <%= link_to edit_skill_path(t) do%>
