--- a/app/views/skills/new.html.erb
+++ b/app/views/skills/new.html.erb
@@ -12,7 +12,7 @@
 
         <div class="form-group">
           <%= f.label t('type'), class: "control-label" %>
-          <%= f.text_field :type, class: "form-control", :maxlength => "30"%>
+          <%= f.select :technical, {t('skills.technical')=>true, t('skills.not_technical')=> false}, {:multiple => false, :class => "chosen", 'style'=> 'width:100%'} %>
         </div>
 
         <div class="form-group">
