--- a/app/views/milestones/_innerform.erb
+++ b/app/views/milestones/_innerform.erb
@@ -66,7 +66,13 @@
                   <%= m.label t('milestones.cannot_assign')%>
               <%else%>
                   <%= m.label t('milestones.assign_to'), class: "control-label" %>:<br>
-                  <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :required=>true, :multiple => true, class: 'chzn-select', 'data-placeholder'=> t('milestones.select_people'), 'style'=> 'width:100%') %>
+                  <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :required=>true,
+                                 :multiple => true, class: 'chzn-select', 'data-placeholder'=> t('milestones.select_people'),
+                                 'style'=> 'width:100%', 'id'=>'listaPersonas') %>
+                  <div class="form-group">
+                    <input type="checkbox" name="allPeople" id="allPeople">
+                    <label class="control-label"><small><%= 'Todos los usuarios' %></small></label>
+                  </div>
               <%end%>
             </div>
         <% end %>
@@ -74,3 +80,15 @@
       <%= m.hidden_field(:people, :value=>@person.id) %>
       <%= m.button t('milestones.new.submit'), :type => 'submit', class: "btn btn-default" %>
 </div>
+<script>
+    $("#allPeople").click(function() {
+
+        if ($("#listaPersonas_chosen").is(":visible")){
+            $("#listaPersonas_chosen").hide();
+            $("#listaPersonas_chosen").val('');
+        }else{
+            $("#listaPersonas_chosen").show();
+            $("#listaPersonas_chosen").val(0);
+        }
+    });
+</script>
