--- a/app/views/skills/new.html.erb
+++ b/app/views/skills/new.html.erb
@@ -17,7 +17,7 @@
 
         <div class="form-group">
           <%= f.label t('icon'), class: "control-label" %>
-          <%= f.text_field :icon, class: "form-control", :maxlength => "30"%>
+          <%= f.cl_image_upload(:icon, :crop => :fill, :width => 20, :height => 20) %>
         </div>
 
           <%= f.button t('skills.new.submit'), options= :type => 'submit', class: "btn btn-default" %>
