--- a/app/assets/stylesheets/_projects.scss.erb
+++ b/app/assets/stylesheets/_projects.scss.erb
@@ -64,3 +64,15 @@
         }
     }
 }
+
+td.project-inactive {
+    a {
+        color: grey;
+    }
+}
+
+td.project-finished {
+    a {
+        text-decoration:line-through;
+    }
+}
