--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -23,6 +23,8 @@ $sunflower-dark: #E8B113;
 $alizarin-dark: #FF6C61;
 $midnightblue-dark:#23323D;
 
+$alizarin-light: #ffd1cf;
+
 $peterriver-focus: #1d76b8;
 
 $nav-background: $midnightblue;
