--- a/app/assets/stylesheets/_tables.scss.erb
+++ b/app/assets/stylesheets/_tables.scss.erb
@@ -5,6 +5,7 @@
     background-color: white;
     position: relative;
 
+
     a {
         color: $alizarin;
         text-decoration: none;
@@ -84,4 +85,37 @@
         margin-bottom: -1px;
         padding: 15px;
     }
+}
+
+.actions {
+    text-align: right;
+    a {
+        font-size: 16px;
+        color: $alizarin-light;
+    }
+}
+
+.table > tbody > tr {
+
+    &:hover {
+        background-color: #D5DADC;
+        .actions {
+            a {
+                color: $alizarin;
+            }
+        }
+    }
+
+    > td {
+        vertical-align: middle;
+    }
+}
+
+.image-col {
+    max-width: 50px;
+}
+
+
+.small-image-col {
+    width: 30px;
 }
