--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-8 col-xs-offset-2">
       <div class="table-container table-difrows">
         <h1>
           <%= link_to new_collection_path do%>
@@ -10,21 +10,21 @@
         <table class="table datatable table-striped" id="colecciones" data-info="false">
           <thead>
           <tr class="title_row" >
-            <th><%= t('title') %></th>
             <th><%= t('description') %></th>
             <th><%= t('collections.templates') %></th>
-            <th><%= t('actions') %></th>
+            <th></th>
           </tr>
           </thead>
           <tbody>
           <% @collections.each do |m| %>
               <tr>
-                <td class="description_row">
-                  <% link_to m.title, collection_path(m), method: :get %>
-                  <%=m.title%>
-                </td>
-                <td class="description_row">
-                  <%= m.description %>
+                <td>
+                  <%= link_to collection_path(m), method: :get do %>
+                    <%= m.title%>
+                  <% end %>
+                  <p>
+                    <%= m.description %>
+                  </p>
                 </td>
 
                 <td>
@@ -38,7 +38,7 @@
                   <% end %>
                   </ul>
                 </td>
-                <td>
+                <td class="actions">
                   <%= link_to collections_destroy_path(id: m.id),
                               data: { confirm: t('collections.delete.sure') } do %>
                       <span class='large-text glyphicon glyphicon-trash'></span>
