--- a/app/views/milestones/_report_detail.erb
+++ b/app/views/milestones/_report_detail.erb
@@ -7,15 +7,13 @@
     <%= "," unless i == 0 %>
     {
         "status":"<%=raw((milestone_highlight(m, :static) + ' ' + milestone_status(m,:static)).gsub('"', "'")) %>",
-        "title":"<%= raw(link_to(m.title, milestone_path(m), method: :get).gsub(/"/, "'"))%>",
-        "description":"<%= m.description.truncate(100).gsub('"', "'").gsub(/\r\n/, ' ') %>",
+        "description":"<%= raw(link_to(m.title, milestone_path(m), method: :get).gsub(/"/, "'"))%><p><%= m.description.truncate(100).gsub('"', "'").gsub(/\r\n/, ' ') %></p><ul class='tags_row'><% m.tags.order('LOWER(name)').each do |t| %><li><%= t.name %></li><% end %></ul>",
         "categories": "<%= m.category.name.gsub('"', "'") %>",
         "people": "<ul><% m.people.order('LOWER(name)').each do |p| %><li><%= raw((link_to p.name, person_path(p.id), method: :get).gsub('"', "'")) %></li><% end %></ul>",
-        "tags":"<ul class='tags_row'><% m.tags.order('LOWER(name)').each do |t| %><li><%= t.name %></li><% end %></ul>",
         "start_date":"<%= m.start_date %>",
         "due_date":"<%= m.due_date %>",
         "completed_date":"<%= m.completed_date %>",
-        "actions" :"<% if can_modify_milestone? m.id %><%= raw((link_to "<span class='large-text glyphicon glyphicon-pencil'></span>".html_safe, edit_milestone_path(m)).gsub('"', "'")) %><% end %><% if current_user_admin? %><%= raw((link_to "<span class='large-text glyphicon glyphicon-trash'></span>".html_safe,  milestone_path(m),method: :delete,data: { confirm: t('milestones.delete.sure') }).gsub('"', "'")) %><%end%>"
+        "actions" :"<% if can_modify_milestone? m.id %><%= raw((link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_milestone_path(m)).gsub('"', "'")) %><% end %><% if current_user_admin? %><%= raw((link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe,  milestone_path(m),method: :delete,data: { confirm: t('milestones.delete.sure') }).gsub('"', "'")) %><%end%>"
     }
 <% end %>
 ]}
