--- a/app/views/tech_roles/index.html.erb
+++ b/app/views/tech_roles/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-8 col-xs-offset-2">
 
       <div class="table-container table-difrows">
 
@@ -16,25 +16,23 @@
 
           <thead>
           <tr>
-            <th><%= t('id') %></th>
             <th><%= t('name') %></th>
-            <th><%= t('milestones.actions') %></th>
+            <th></th>
           </tr>
           </thead>
           <tbody>
           <% @techRoles.each do |t| %>
               <tr>
-                <td><%= t.id %></td>
                 <td><%= t.name %></td>
                 <% if current_user_admin? %>
-                    <td>
+                    <td class="actions">
                       <%= link_to edit_tech_role_path(t) do%>
-                          <span class='large-text glyphicon glyphicon-pencil'></span>
+                          <span class='glyphicon glyphicon-pencil'></span>
                       <% end %>
                     <%= link_to tech_role_path(t),
                                     method: :delete,
                                     data: { confirm: t('tech_roles.delete.sure') } do %>
-                          <span class='large-text glyphicon glyphicon-trash'></span>
+                          <span class='glyphicon glyphicon-trash'></span>
                       <% end %>
                     </td>
                 <%else%>
