--- a/app/views/technologies/index.html.erb
+++ b/app/views/technologies/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-8 col-xs-offset-2">
 
       <div class="table-container table-difrows">
 
@@ -16,17 +16,14 @@
 
           <thead>
           <tr>
-            <th><%= t('id') %></th>
-            <th><%= t('name') %></th>
             <th><%= t('icon') %></th>
-            <th><%= t('actions') %></th>
+            <th><%= t('name') %></th>
+            <th></th>
           </tr>
           </thead>
           <tbody>
           <% @technologies.each do |t| %>
               <tr>
-                <td><%= t.id %></td>
-                <td><%= t.name %></td>
                 <td>
                   <div id="profile-picture-<%= t.id %>" class="profile_picture">
                     <div class="img-container">
@@ -35,15 +32,16 @@
                     </div>
                   </div>
                 </td>
+                <td><%= t.name %></td>
                 <% if current_user_admin? %>
-                    <td>
+                    <td class="actions">
                       <%= link_to edit_technology_path(t) do%>
-                          <span class='large-text glyphicon glyphicon-pencil'></span>
+                          <span class='glyphicon glyphicon-pencil'></span>
                       <% end %>
                       <%= link_to technology_path(t),
                                   method: :delete,
                                   data: { confirm: t('technologies.delete.sure') } do %>
-                          <span class='large-text glyphicon glyphicon-trash'></span>
+                          <span class='glyphicon glyphicon-trash'></span>
                       <% end %>
                     </td>
                 <%else%>
