--- a/app/views/skills/new.html.erb
+++ b/app/views/skills/new.html.erb
@@ -7,7 +7,7 @@
 
           <div class="form-group">
             <%= f.label t('name'), class: "control-label" %>
-            <%= f.text_field :name, class: "form-control", 'data-validation': "required", :maxlength => "30"%>
+            <%= f.text_field :name, class: "form-control", 'data-validation': "required"%>
           </div>
 
         <div class="form-group">
@@ -17,10 +17,10 @@
 
         <div class="form-group">
           <%= f.label t('icon'), class: "control-label" %>
-          <%= f.cl_image_upload(:icon, :crop => :fill, :width => 20, :height => 20) %>
+          <%= f.cl_image_upload(:icon, :crop => :fill, :width => 30, :height => 30) %>
         </div>
 
-          <%= f.button t('skills.new.submit'), options= :type => 'submit', class: "btn btn-default" %>
+          <%= f.button t('skills.new.submit'), :type => 'submit', class: "btn btn-default" %>
       <% end %>
 
     </div>
