--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -1,224 +1,7 @@
 <% if @milestones and not @milestones.empty? %>
     <div id="timeline-card" class="card timeline">
-      <ul id="milestone-list">
-        <% @milestones.each do |e| %>
-
-            <% if e.status == 'pending' && e.due_date && e.due_date < Date.today %>
-                <li class="clearfix expired">
-            <% else %>
-                <li class="clearfix">
-            <% end %>
-            <div class="icon"><%= milestone_icon(e).html_safe %></div>
-            <div class="row">
-              <div class="col-xs-10">
-                <%if e.pending?%>
-                  <% if can_modify_milestone?e.id %>
-                      <%= milestone_highlight(e, :small)%>
-                  <%else%>
-                    <% if e.highlighted %>
-                      <span class="milestone-highlight small true"></span>
-                    <%else%>
-                      <span class="milestone-highlight small false"></span>
-                    <%end%>
-                  <%end%>
-                    <h2 class="title">
-                      <%=link_to e.title, e, method: :get%>
-                      <% if e.category %>
-                          <small> <%= e.category.name %></small>
-                      <% end %>
-                    </h2>
-                <%else%>
-                    <% if can_modify_milestone?e.id %>
-                      <%= milestone_highlight(e, :small)%>
-                    <%else%>
-                      <% if e.highlighted %>
-                        <span class="milestone-highlight small true"></span>
-                      <%else%>
-                        <span class="milestone-highlight small false"></span>
-                      <%end%>
-                    <%end%>
-
-                      <h2 class="title">
-                        <strike><%=link_to e.title, e, method: :get%></strike>
-                        <% if e.category %>
-                            <small> <%= e.category.name %></small>
-                        <% end %>
-                      </h2>
-                <%end%>
-              </div>
-              <div class="col-xs-2">
-                <% if can_modify_milestone?e.id %>
-                    <%= if e.status != 'rejected'
-                          milestone_status(e,:right)
-                        end %>
-                    <%= milestone_status_rej(e, :right) %>
-                <%end%>
-              </div>
-            </div>
-            <p title="<%=e.description%>"><%=e.description.to_s.truncate(100, separator: ' ') %></p>
-
-            <% if e.status == 'rejected' %>
-                <p><%= t('milestones.rejected_date') + l(e.deleted_date, format: :long) %></p>
-            <% end %>
-            <% if e.status == 'done' %>
-                <p><%= t('milestones.done_date') + l(e.completed_date, format: :long) %></p>
-            <% end %>
-
-            <!--<% if e.due_date %>
-                <div class="calendar"><%=l(e.due_date, format: "%A, %B %d %Y")%></div>
-            <% end %>-->
-
-            <div class="clearfix"></div>
-
-            <% @milestone = e %>
-
-
-            <% if (@milestone.pending?) && (can_modify_milestone?@milestone.id) %>
-                <div class="date-row editable">
-            <%else%>
-                <div class="date-row">
-            <% end %>
-            <% if @milestone.start_date %>
-                <div class="calendar"><%= l(@milestone.start_date, format: :long) %></div>
-            <% end %>
-
-            <% if @milestone.due_date %>
-                <div class="calendar right"><%= l(@milestone.due_date, format: :long) %></div>
-            <% end %>
-
-            <% if (@milestone.pending?) && (can_modify_milestone?@milestone.id) %>
-                </div>
-            <%else%>
-                </div>
-            <% end %>
-
-            <% if can_modify_milestone?@milestone.id %>
-
-
-                <div class="edit-form row">
-                  <%= form_for @milestone do |f| %>
-                      <%= f.hidden_field :category_id %>
-                      <% if @milestone.category && @milestone.category.is_feedback? %>
-                          <%= f.hidden_field :feedback_author_id %>
-                      <% end %>
-
-                      <div class="form-group col-xs-6">
-                        <%= f.label t('milestones.start_date'), class: "control-label" %>
-                        <div class="input-group">
-                          <%= f.text_field :start_date, class: "form-control submit-on-enter", id:'start_date' ,value:(@milestone.start_date ? l(@milestone.start_date) : nil), "data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy" %>
-                          <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
-                        </div>
-                      </div>
-
-                      <div class="form-group col-xs-6">
-                        <%= f.label t('milestones.due_date'), class: "control-label" %>
-                        <div class="input-group">
-                          <%= f.text_field :due_date, class: "form-control submit-on-enter" , id:'due_date',value:(@milestone.due_date ? l(@milestone.due_date) : nil) ,"data-provide":"datepicker", 'data-validation':'check_due_date', 'data-validation-format': "dd/mm/yyyy" %>
-                          <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
-                        </div>
-                      </div>
-
-                      </div>
-
-
-                  <% end %> <!-- Form -->
-
-            <% end %>
-
-
-            <div class="clearfix"></div>
-
-            <div class="resources-list clearfix">
-              <h3>
-                  <% if can_modify_milestone?(e.id) %>
-                      <%=link_to :controller => 'google', :action => 'adddriveview', :milestone_id => e.id do%>
-                          <span class="glyphicon glyphicon-plus"></span>
-                      <% end %>
-                  <% else %>
-                      <span class="glyphicon glyphicon-duplicate"></span>
-                  <% end %>
-              </h3>
-
-              <h2>&nbsp;&nbsp;<%=t(:attachmentsdocs)%></h2>
-
-              <% unless e.resources.empty? %>
-                <span class="toggle-documents glyphicon glyphicon-chevron-down"></span>
-              <% end %>
-
-              <% unless e.resources.empty? %>
-
-                  <div class="slider">
-                    <ul>
-                      <%e.resources.each do |r|%>
-
-                          <%=link_to  r.url, :target => "_blank" do%>
-                              <span class="glyphicon glyphicon glyphicon-paperclip"></span>
-                              &nbsp;&nbsp;
-                              <%= r.title.truncate(48) %>
-                          <% end %>
-                          <br>
-                      <%end%>
-                    </ul>
-                  </div>
-              <% end %>
-
-            </div>
-
-
-
-
-            <!-- Muestro ultima nota -->
-            <% visible_notes = e.get_visible_notes(current_person)
-               n = visible_notes.first %>
-
-            <div class="notes-list clearfix">
-              <h2><span class="glyphicon glyphicon-comment"></span></h2>
-
-              <%= render "notes/form" %>
-
-              <% unless n.nil? %>
-                  <span class="toggle-documents glyphicon glyphicon-chevron-down"></span>
-                  <div class="slider">
-                    <ul>
-
-                      <li>
-                        <h3><%= n.author.name %></h3>
-                        <div class="time"><%=  t('ago_i') + time_ago_in_words(n.created_at) + t('ago_f')  %></div>
-                        <p><%= truncate(n.text, length: 350) %></p>
-
-                        <% if current_user_admin?
-                             link_to [n.milestone, n],
-                                     method: :delete,
-                                     data: { confirm: t('notes.delete.sure')},
-                                     class: 'delete' do %>
-                                <span class="glyphicon glyphicon-remove"></span>
-                            <% end
-                               end %>
-
-                      </li>
-                    </ul>
-                    <% if visible_notes.count > 1 %>
-                        <div class="link">
-                          <%= link_to t('people.new.other_notes', :count => "#{visible_notes.count - 1}"), e %></div>
-                    <% end %>
-                  </div>
-
-              <% end %>
-
-            </div>
-            <% unless @milestone.tags.empty? %>
-                <ul class="tags clearfix">
-                  <% @milestone.tags.each do |t| %>
-                      <li><%= t.name %></li>
-                  <%end%>
-                </ul>
-            <%end%>
-
-            <div class="milestone-last-update">
-              <%= t('milestones.last_update') + " " + t('ago_i') +  time_ago_in_words(e.updated_at) + t('ago_f') %>
-            </div>
-            </li>
-        <% end %>
+      <ul id="milestone-list" class="jscroll-container">
+        <%= render partial: 'people/inner_timeline_card'%>
       </ul>
     </div>
 
