Se arreglan traducciones en objetivos

--- a/app/assets/stylesheets/_objectives.scss.erb
+++ b/app/assets/stylesheets/_objectives.scss.erb
@@ -9,3 +9,10 @@
     margin-top: 10px;
 }
 
+.description-input{
+    width:340px !important;
+}
+
+.add-objective-btn{
+    vertical-align:top !important;
+}
