--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -20,7 +20,7 @@
       <div class="milestone-container">
         <h4 class="text-center">
           <span class="glyphicon glyphicon-duplicate"></span>
-          <%=t(:attachmentsdocs)%>
+          <%= t(:attachmentsdocs) %>
         </h4>
         <hr>
         <%= render 'milestones/show_docs' %>
@@ -39,7 +39,7 @@
       <div class="milestone-container">
         <h4 class="text-center">
           <span class="glyphicon glyphicon-screenshot"></span>
-          <%=t('milestones.checklist.actual_objetives')%>
+          <%= t('milestones.checklist.actual_objectives') %>
         </h4>
         <hr>
         <%= render 'objectives/show' %>
