--- a/app/views/objectives/_new.html.erb
+++ b/app/views/objectives/_new.html.erb
@@ -4,10 +4,13 @@
   <%= form_for([@milestone, @milestone.objectives.build] , html: { 'data-toggle': 'validator'}) do |f| %>
       <div class="input-group">
 
-        <%= f.text_field :description, class: "submit-on-enter form-control", placeholder: t('milestones.checklist.add_more_items') %>
-        <span class="input-group-btn">
-            <button class="btn btn-default" type="submit"><%= t('milestones.checklist.add_checklist') %></button>
-        </span>
+        <div>
+          <%= f.text_field :description, class: "submit-on-enter form-control description-input", 'data-validation': "required", placeholder: t('milestones.checklist.add_more_items') %>
+        </div>
+        <div class="input-group-btn">
+            <button class="btn btn-default add-objective-btn" type="submit"><%= t('milestones.checklist.add_checklist') %></button>
+        </div>
+
       </div>
   <% end %>
 </div>
