cambios imagen skill

--- a/app/views/people/_profile_card.erb
+++ b/app/views/people/_profile_card.erb
@@ -14,7 +14,7 @@
   <h2 style="overflow: hidden; text-overflow: ellipsis;"><%= @trole %></h2>
   <ul id="skills">
     <% @skills.each do |s| %>
-        <li><%= image_tag s.icon %></li>
+        <li><%= cl_image_tag s.icon %></li>
     <% end %>
     <%if current_user_admin? %>
         <li class="plus" >
