--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -26,7 +26,7 @@
           <tbody>
           <% @skills.each do |t| %>
               <tr>
-                <td><%= image_tag t.icon %></td>
+                <td><%= cl_image_tag t.icon %></td>
                 <td><%= t.name %></td>
      
                 <td>
