--- a/app/assets/stylesheets/_dashboard.scss.erb
+++ b/app/assets/stylesheets/_dashboard.scss.erb
@@ -25,6 +25,10 @@
     min-height: 90px;
     color: white;
 
+    tr:hover{
+        background-color: #169F85;
+    }
+
     h1 {
         background-color: #169F85;
     }
@@ -79,6 +83,10 @@
     border-color: #FC6A06;
     color: white;
     min-height: 90px;
+
+    tr:hover{
+        background-color: #FC6A06;
+    }
 
     h1 {
         background-color: #FC6A06;
