--- a/app/views/milestones/report.html.erb
+++ b/app/views/milestones/report.html.erb
@@ -72,7 +72,7 @@
         <thead>
         <tr>
           <th id="status" class="status status_col"><%= t('milestones.state_title') %></th>
-          <th id="title" class="title title_row" ><%= t('milestones.description') %></th>
+          <th id="title" class="title title_row" ><%= t('milestones.title') %></th>
           <th class="categories category_row"><%= t('milestones.category') %></th>
           <th class="people people_row"><%= t('milestones.people') %></th>
           <th class="start_date" style="width: 100px" ><%= t('milestones.start_date') %></th>
