alfred-250 doble click prevent

--- a/app/assets/javascripts/timeline.js.erb
+++ b/app/assets/javascripts/timeline.js.erb
@@ -28,6 +28,12 @@ var timeline_ready = function () {
         }, 400);
         return false;
     });
+    $(".oncelink").one('click',function(e){
+        $(this).on('click',function(ev){
+            ev.preventDefault();
+            return false;
+        });
+    });
 };
 
 $(document).ready(timeline_ready);
