--- a/app/views/dashboard/_review_table.html.erb
+++ b/app/views/dashboard/_review_table.html.erb
@@ -51,7 +51,7 @@
         <%= @review_table_header %>
       </h1>
 
-      <table class="table filter-table table-striped" data-info="false">
+      <table id="review-table" class="table filter-table table-striped" data-info="false">
         <thead>
             <tr>
               <th data-name="icon"></th>
