--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -66,6 +66,13 @@
             </div>
           </div>
 
+
+          <div class="row">
+            <div  class="col-xs-offset-3 col-xs-6">
+              <div class="image-preview"></div>
+            </div>
+          </div>
+
           <div class="row">
             <div class="col-xs-12">
               <div class="progress hidden">
@@ -79,9 +86,6 @@
             <div class="form-group col-xs-6">
               <%= f.label "Imagen", class: "control-label" %>
               <%= f.cl_image_upload(:image_id, :crop => :fill, :width => 300, :height => 300) %>
-            </div>
-            <div class="form-group col-xs-6">
-              <div class="image-preview"></div>
             </div>
           </div>
 
