--- a/app/assets/stylesheets/_dashboard.scss.erb
+++ b/app/assets/stylesheets/_dashboard.scss.erb
@@ -83,6 +83,7 @@
     border-color: #FC6A06;
     color: white;
     min-height: 90px;
+    margin-bottom: 30px;
 
     tr:hover{
         background-color: #FC6A06;
