--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,5 +1,3 @@
-<%= cloudinary_js_config %>
-
 <div class="container">
   <div class="row">
     <div class="card-col col-xs-5 col-xs-offset-3">
@@ -60,6 +58,12 @@
             </div>
 
             <div class="row">
+              <div  class="col-xs-offset-3 col-xs-6">
+                  <div class="image-preview"></div>
+              </div>
+            </div>
+
+            <div class="row">
               <div class="col-xs-12">
                 <div class="progress hidden">
                   <div class="progress-bar" role="progressbar">
@@ -72,9 +76,6 @@
               <div class="form-group col-xs-6">
                 <%= f.label "Imagen", class: "control-label" %>
                 <%= f.cl_image_upload(:image_id, :crop => :fill, :width => 300, :height => 300) %>
-              </div>
-              <div class="form-group col-xs-6">
-                <div class="image-preview"></div>
               </div>
             </div>
           </div>
