--- a/app/views/skills/edit.html.erb
+++ b/app/views/skills/edit.html.erb
@@ -15,6 +15,21 @@
             <%= f.select :technical, {t('skills.technical')=>true, t('skills.not_technical')=> false}, {:multiple => false, :class => "chosen", 'style'=> 'width:100%'} %>
           </div>
 
+
+          <div class="col-xs-6 col-offset-xs-3">
+            <div class="image-preview"></div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="progress hidden">
+                <div class="progress-bar" role="progressbar">
+                </div>
+              </div>
+            </div>
+          </div>
+
+
           <div class="form-group">
             <%= f.label t('icon'), class: "control-label" %>
             <%= f.cl_image_upload(:icon, :crop => :fill, :width => 30, :height => 30) %>
