--- a/app/assets/stylesheets/_dashboard.scss.erb
+++ b/app/assets/stylesheets/_dashboard.scss.erb
@@ -122,5 +122,26 @@
         font-weight: normal;
     }
 
+    .pagination {
+
+        a {
+            border-color: #ff6f26;;
+            background-color: #fa8232;
+        }
+
+        .next a, .previous a {
+
+        }
+
+        .disabled a {
+            color: #e6712e;
+        }
+
+        .active a {
+            background-color: #ffffff;
+            color: #fa8232;
+        }
+
+    }
 
 }
