--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -1,3 +1,6 @@
+body.milestones {
+    background-color: white;
+}
 
 #btnListMilestones{
     float: right;
@@ -121,15 +124,16 @@
     margin-bottom: 15px;
 
 
-    form {
+    .notes-form {
 
         padding-bottom: 20px;
 
-        input {
-            width: calc(100% - 50px);
+        input.form-control {
+            margin-top: 1px;
+            width: calc(100% - 75px);
         }
-        select {
-            width: 45px;
+        select.form-control {
+            width: 75px;
         }
     }
 
