--- a/app/assets/stylesheets/_tables.scss.erb
+++ b/app/assets/stylesheets/_tables.scss.erb
@@ -124,3 +124,14 @@
     float: right;
     margin: 15px 15px 0 0;
 }
+
+.pagination {
+    li a {
+        color: $alizarin;
+    }
+
+    .active a, .active a:hover {
+        background-color: $alizarin;
+        border-color: $alizarin;
+    }
+}
