--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,13 +1,14 @@
-<%= form_for([@milestone, @milestone.notes.build], html: { 'data-toggle': 'validator'}) do |n| %>
-    <%= n.text_field :text, 'data-validation': "required",
-                     class: "submit-on-enter", placeholder: t('notes.add_placeholder') %>
-    <%= n.select(:visibility,options_for_select(
-                                    [["&#xe105".html_safe,:every_body],
-                                     ["&#xe106;".html_safe,:mentors],
-                                     ["&#xe033;".html_safe,:me]]),
-                 {}, {class: "glyphicon"}
-        )%>
-    <br>
+<%= form_for([@milestone, @milestone.notes.build], html: { class: 'notes-form', 'data-toggle': 'validator'}) do |n| %>
+    <div class="input-group full-width">
+      <%= n.text_field :text, 'data-validation': "required",
+                     class: "submit-on-enter form-control", placeholder: t('notes.add_placeholder') %>
+      <%= n.select(:visibility,options_for_select(
+                                      [["&#xe105".html_safe,:every_body],
+                                       ["&#xe106;".html_safe,:mentors],
+                                       ["&#xe033;".html_safe,:me]]),
+                   {}, {class: "form-control glyphicon"}
+          )%>
+    </div>
 
 <% end %>
 
